# echoloop-playlist-raid

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  toolchain.lock.json
docs/: architecture.md  audio-analysis.md  beat-map.md  build.md  chart-generation.md  data-schemas.md  duo-mode.md  full-setup.md  implementation-plan-phase-0-2.md  implementation-plan-phase-3.md  implementation-plan-phase-4-1.md  implementation-plan-phase-4-2.md  local-audio-import.md  navigation-and-pause.md  phase-0-2-report.md  phase-3-report.md  phase-4-1-report.md  phase-4-2-report.md  phase-4-report.md  song-pack.md  specification.md  testing.md  third-party-licenses.md  toolchain-management.md  troubleshooting.md  ui-ux-design-system.md  youtube-import.md  ytdlp-installation.md  ytdlp-integration.md  ytdlp-update-and-rollback.md
godot/: export_presets.cfg  project.godot
schemas/: analysis.schema.json  chart.schema.json  job-request.schema.json  job-status.schema.json  manifest.schema.json  replay.schema.json
tools/: bootstrap_all.ps1  build_windows.ps1  check_environment.ps1  clean.ps1  export_environment_report.ps1  generate_fixtures.ps1  setup.ps1  (+17 more)
worker/: pyproject.toml
worker/src/echoloop_worker/: __init__.py  analysis.py  audio.py  charts.py  cli.py  song_pack.py  source_adapters.py  tracking.py
worker/src/echoloop_worker/jobs/: __init__.py  audio.py  health.py  youtube.py
worker/src/echoloop_worker/logging/: __init__.py  jsonl.py
worker/tests/: test_fixtures.py  test_phase3.py  test_phase4_duo.py  test_phase4_youtube.py  test_worker.py
(+37 files in other folders)
