[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "echoloop-worker"
version = "0.1.0"
description = "Offline job worker boundary for ECHOLOOP: PLAYLIST RAID"
requires-python = ">=3.11,<3.13"
dependencies = ["jsonschema>=4.20,<5"]

[project.optional-dependencies]
audio = [
  "numpy>=1.26,<3",
  "scipy>=1.11,<2",
  "librosa>=0.10,<1",
  "soundfile>=0.12,<1",
  "soxr>=0.3,<1",
  "Pillow>=10,<12"
]
beat = [
  "beat-this",
  "einops>=0.7,<1",
  "rotary-embedding-torch>=0.6,<1",
  "tqdm>=4.66,<5"
]
dev = ["pytest>=8.0,<9", "ruff>=0.5,<1", "mypy>=1.10,<2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
